@@ -9,6 +9,9 @@
 #include <QWidget>
 #include <QTimer>
 #include <types.h>
+#include <HeartbeatMonitor.h>
+#include <AstroDebug.h>
+#include <AstroUtils.h>
 
 namespace snowgui {
 
@@ -16,21 +19,9 @@ namespace Ui {
 	class SystemInfoWidget;
 }
 
-class HeartbeatMonitor : public QObject, public snowstar::HeartbeatMonitor {
-	Q_OBJECT
-
-public:
-	HeartbeatMonitor();
-	virtual ~HeartbeatMonitor();
-
-	virtual void    beat(int sequence_number, 
-				const Ice::Current& /* current */);
-	virtual void    stop(const Ice::Current& /* current */);
-	
-signals:
-	void	update(QString);
-};
-
+/**
+ * \brief A Widget to display systeminfo, including heartbeat information
+ */
 class SystemInfoWidget : public QWidget {
 	Q_OBJECT
 
@@ -45,9 +36,43 @@ public:
 
 	void	setDaemon(snowstar::DaemonPrx daemon);
 
+	/**
+	 * \brief Add a receiver
+	 *
+	 * This method assumes that the receiver class has the methods
+	 * heartbeat_update, heartbeat_lost, heartbeat_reconnected
+	 *
+	 * \param r	the receiver to add
+	 */
+	template<typename receiver>
+	void	add_receiver(receiver *r) {
+		HeartbeatMonitor	*h
+			= dynamic_cast<HeartbeatMonitor*>(&*_heartbeat_monitor);
+		if (NULL == h) {
+			return;
+		}
+		// add connection from the heartbeat monitor
+		connect(h, SIGNAL(update(QString)),
+			r, SLOT(heartbeat_update(QString)),
+			Qt::QueuedConnection);
+		connect(h, SIGNAL(lost()),
+			r, SLOT(heartbeat_lost()),
+			Qt::QueuedConnection);
+		connect(h, SIGNAL(reconnected()),
+			r, SLOT(heartbeat_reconnected()),
+			Qt::QueuedConnection);
+		debug(LOG_DEBUG, DEBUG_LOG, 0, "new receiver %s connected",
+			astro::demangle(typeid(*r).name()).c_str());
+	}
+
+	static SystemInfoWidget	*global();
+	static void	setGlobal(SystemInfoWidget *s);
+
 public slots:
 	void	update();
 	void	heartbeat_update(QString);
+	void	heartbeat_lost();
+	void	heartbeat_reconnected();
 };
 
 } // namespace snowgui
