@@ -1,5 +1,10 @@
 ChangeLog for the Astro project.
 
+20200802:
+	* add pause and resume to the heartbeat interface
+	* add interval callback to the heartbeat interface
+	* add pause/resume commands to the snowheartbeat program
+
 20200801:
 	* add callback to the ccd device
 	* add callback to CcdI servant interface and implementation
